againg change interp

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,9 @@ click==7.1.2
 Flask==1.1.2
 gunicorn==20.0.4
 itsdangerous==1.1.0
-Jinja2~=2.11.2
+Jinja2==2.11.3
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
-pip~=20.1.1
-zlib~=1.2.11
-wheel~=0.34.2
-openssl~=1.1.1g
-cryptography~=2.9.2
-py~=1.9.0
-lxml~=4.5.2
-keyring~=21.2.1
-typing_extensions~=3.7.4.2
-colorama~=0.4.3
-gevent~=20.6.2
-tornado~=6.0.4
-greenlet~=0.4.16
-setuptools~=49.2.0
-cython~=0.29.21
-docutils~=0.16
-future~=0.18.2
+pip~=21.0.1
+colorama~=0.4.4
+setuptools~=49.2.1
